--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/react-hooks": "^7.0.2",
+    "axios": "^0.25.0",
     "chokidar": "^3.5.3",
     "classnames": "^2.2.6",
     "fsevents": "^2.3.2",
@@ -48,5 +50,6 @@
       "<rootDir>/node_modules/",
       "<rootDir>/.git/"
     ]
-  }
+  },
+  "proxy": "http://localhost:8001"
 }
